--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "timeout": 30000,
     "port": 9090,
-    "keepFiles": true,
+    "keepFiles": false,
     "encrpt": false,
     "inDirectory": "in/req",
     "outDirectory": "out/resp",
