fsmon模块增加等侍文件就绪功能，避免读取未写入完成的文件。

--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
     "timeout": 30000,
     "port": 9090,
-    "keepFiles": false,
+    "fileCheckInterval": 20,
+    "keepFiles": true,
     "encrpt": false,
     "inDirectory": "in/req",
     "outDirectory": "out/resp",
