--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
     "timeout": 30000,
     "port": 9090,
     "fileCheckInterval": 20,
-    "keepFiles": true,
+    "fileScanInterval": 200,
+    "keepFiles": false,
     "encrpt": false,
     "inDirectory": "in/req",
     "outDirectory": "out/resp",
