代码重构： 1.添加main作为主入口，通过subcmd控制以InBound或OutBound方式运行。 2.config模块中将InBound和OutBound的TextTransfer配置项拆分。

--- a/config.json
+++ b/config.json
@@ -3,11 +3,12 @@
     "port": 9090,
     "fileCheckInterval": 20,
     "fileScanInterval": 200,
-    "keepFiles": true,
+    "keepFiles": false,
     "encrpt": false,
     "inDirectory": "in/req",
     "outDirectory": "out/resp",
-    "textTransfer": false,
+    "inTextTransfer": true,
+    "outTextTransfer": false,
     "urlMapping": {
         "/test": "http://localhost:3005/index.html",
         "/": "https://cn.bing.com/"
