初步完成代码重构： 拆分了InBound、OutBound、Transfer、Monitor四类对象分别负责：入站端、出站端、数据传输、数据接收监控。 拆分后可扩展不同的Transfer和Monitor以支持不同的数据传输方式

--- a/config.json
+++ b/config.json
@@ -7,8 +7,10 @@
     "encrpt": false,
     "inDirectory": "in/req",
     "outDirectory": "out/resp",
-    "inTextTransfer": true,
+    "inTextTransfer": false,
     "outTextTransfer": false,
+    "inTransferType": "file",
+    "outTransferType": "file",
     "urlMapping": {
         "/test": "http://localhost:3005/index.html",
         "/": "https://cn.bing.com/"
