增加对TCP协议的支持

--- a/config.json
+++ b/config.json
@@ -9,8 +9,8 @@
     "outDirectory": "out/resp",
     "inTextTransfer": false,
     "outTextTransfer": false,
-    "inTransferType": "udp",
-    "outTransferType": "udp",
+    "inTransferType": "tcp",
+    "outTransferType": "tcp",
     "inMonitorHost":  "0.0.0.0",
 	"inMonitorPort":  9091,
 	"outMonitorHost": "0.0.0.0",
