log输出细节调整，config中增加对日志级别，输出方式的配置

--- a/config.json
+++ b/config.json
@@ -14,7 +14,10 @@
     "inMonitorHost":  "0.0.0.0",
 	"inMonitorPort":  9091,
 	"outMonitorHost": "0.0.0.0",
-	"outMonitorPort": 9092,
+    "outMonitorPort": 9092,
+    "log":{
+        "level": "debug"
+    },
     "urlMapping": {
         "/test": "http://localhost:3005/index.html",
         "/": "https://cn.bing.com/"
