修复了因为requests map晚于请求发起才记录finishChan导致的响应已经到达了却找不到finishChan引起的超时Bug。 TCP传输方式的速度和稳定性大幅提升。 加入响应超时时输出调试日志的功能。

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "timeout": 30000,
+    "timeout": 20000,
     "port": 9090,
     "fileCheckInterval": 20,
     "fileScanInterval": 200,
@@ -19,7 +19,7 @@
         "level": "debug"
     },
     "urlMapping": {
-        "/test": "http://localhost:3005/index.html",
+        "/test": "http://127.0.0.1:3003/page/login/index.html",
         "/": "https://cn.bing.com/"
     }
 }
