--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "timeout": 20000,
+    "timeout": 30000,
     "port": 9090,
     "fileCheckInterval": 20,
     "fileScanInterval": 200,
@@ -9,8 +9,8 @@
     "outDirectory": "out/resp",
     "inTextTransfer": false,
     "outTextTransfer": false,
-    "inTransferType": "tcp",
-    "outTransferType": "tcp",
+    "inTransferType": "udp",
+    "outTransferType": "udp",
     "inMonitorHost":  "0.0.0.0",
 	"inMonitorPort":  9091,
 	"outMonitorHost": "0.0.0.0",
@@ -20,6 +20,7 @@
     },
     "urlMapping": {
         "/test": "http://127.0.0.1:3003/page/login/index.html",
-        "/": "https://cn.bing.com/"
+        "/": "https://zh-hans.reactjs.org/",
+        "/bing": "https://cn.bing.com/"
     }
 }
